--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,32 +1,18 @@
 {
   "root": true,
   "env": {
-    "es2020": true,
-    "jasmine": true,
-    "jest": true,
-    "node": true
+    "node": true,
+    "jest": true
   },
+  "plugins": ["@typescript-eslint/eslint-plugin"],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "sourceType": "module",
-    "ecmaVersion": 2021,
-    "ecmaFeatures": {
-      "impliedStrict": true
-    }
-  },
-  "settings": {
-    "noInlineConfig": true
+    "project": "./tsconfig.json",
+    "sourceType": "module"
   },
   "extends": [
     "eslint:recommended",
-    "plugin:node/recommended",
-    "airbnb-base",
-    "prettier"
-  ],
-  "rules": {
-    "import/extensions": "off",
-    "linebreak-style": "off",
-    "node/no-unsupported-features/es-syntax": "off",
-    "no-underscore-dangle": "off",
-    "import/prefer-default-export": "off"
-  }
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended"
+  ]
 }
