--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "express": "4.17.1",
     "swagger-ui-express": "4.1.6",
     "uuid": "8.3.2",
+    "winston": "^3.3.3",
     "yamljs": "0.3.0"
   },
   "devDependencies": {
