--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "lint": "eslint --ext .js,.ts --fix src/",
     "doc": "jsdoc -c ./jsdoc.config.json",
     "test": "cross-env DEBUG=rs:* jest --testMatch \"<rootDir>/test/e2e/test/*.test.js\" --noStackTrace --runInBand",
-    "test:auth": "cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace"
+    "test:auth": "cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace",
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js --config=src/common/ormconfig.ts",
+    "migration:g": "npm run typeorm migration:generate -- -n dbMigration",
+    "migration:run": "npm run typeorm migration:run"
   },
   "keywords": [
     "rs",
