--- a/.env
+++ b/.env
@@ -1,10 +1,6 @@
-NODE_ENV=development
 PORT=4000
-AUTH_MODE=false
-JWT_SECRET_KEY=lemon_chiffon
-# Set your database connection information here
-MONGO_CONNECTION_STRING=your-mongo-db-connection-string
-POSTGRES_PORT=5432
-POSTGRES_DB=postgres
+POSTGRES_HOST='localhost'
+POSTGRES_PORT=5433
+POSTGRES_DB=nest-test
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_PASSWORD=grestres123
