--- a/package.json
+++ b/package.json
@@ -1,37 +1,31 @@
 {
-  "name": "rs-rest-service-starter",
-  "version": "1.0.0",
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
-  "type": "commonjs",
-  "description": "REST service starter for RS School",
-  "main": "src/server.js",
+  "name": "nest-node-js-rs2021-q2",
+  "version": "0.0.1",
+  "description": "",
+  "author": "",
+  "private": true,
+  "license": "UNLICENSED",
   "scripts": {
-    "docker": "nodemon -L --exitcrash src/server.ts",
-    "start": "nodemon src/server.ts",
-    "lint": "eslint --ext .js,.ts --fix src/",
-    "doc": "jsdoc -c ./jsdoc.config.json",
+    "prebuild": "rimraf dist",
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "cross-env DEBUG=rs:* jest --testMatch \"<rootDir>/test/e2e/test/*.test.js\" --noStackTrace --runInBand",
-    "test:auth": "cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace",
-    "typeorm": "ts-node ./node_modules/typeorm/cli.js --config=src/common/ormconfig.ts",
-    "migration:g": "npm run typeorm migration:generate -- -n dbMigration",
-    "migration:run": "npm run typeorm migration:run"
+    "test:auth": "cross-env DEBUG=rs:* TEST_MODE=auth jest --noStackTrace"
   },
   "keywords": [
     "rs",
     "school",
     "rest",
     "node",
-    "express",
+    "nest",
     "autotest",
     "starter"
   ],
-  "license": "ISC",
-  "engines": {
-    "node": ">=14.0.0 <15"
-  },
   "jest": {
     "testEnvironment": "node",
     "setupFilesAfterEnv": [
@@ -49,47 +43,45 @@
     ]
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "cross-env": "7.0.3",
-    "dotenv": "9.0.0",
-    "express": "4.17.1",
-    "jsonwebtoken": "^8.5.1",
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.0.0",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.0.1",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
-    "swagger-ui-express": "4.1.6",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.2.0",
     "typeorm": "^0.2.34",
-    "uuid": "8.3.2",
-    "winston": "^3.3.3",
+    "cross-env": "7.0.3",
     "yamljs": "0.3.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.12",
-    "@types/jsonwebtoken": "^8.5.2",
-    "@types/node": "^15.6.1",
-    "@types/swagger-ui-express": "^4.1.2",
-    "@types/uuid": "^8.3.0",
-    "@types/yamljs": "^0.2.31",
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
+    "@nestjs/cli": "^8.0.0",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.0.0",
+    "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "chai": "4.3.4",
     "debug": "4.3.1",
     "dirty-chai": "2.0.1",
-    "eslint": "7.2.0",
-    "eslint-config-airbnb-base": "14.2.1",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.4.0",
+    "jest": "^27.0.6",
+    "prettier": "^2.3.2",
     "husky": "4.3.8",
-    "jest": "26.6.3",
-    "jsdoc": "^3.6.7",
     "lint-staged": "10.5.4",
-    "nodemon": "2.0.7",
-    "prettier": "2.2.1",
-    "supertest": "6.1.3",
+    "supertest": "^6.1.3",
+    "ts-jest": "^27.0.3",
+    "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "typescript": "^4.3.2"
+    "tsconfig-paths": "^3.10.1",
+    "typescript": "^4.3.5"
   }
 }
