--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-fastify": "^8.0.2",
     "@nestjs/typeorm": "^8.0.1",
     "bcryptjs": "^2.4.3",
     "cross-env": "7.0.3",
