feat: add workflow for docker

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=4000
-POSTGRES_HOST='localhost'
-POSTGRES_PORT=5433
-POSTGRES_DB=nest-test
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=porsgres
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=grestres123
+POSTGRES_PASSWORD=postgres
 JWT_SECRET_KEY=lemon_chiffon
 USE_FASTIFY=true
