--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,19 @@
 version: "3"
-
 services:
-    database:
-        build: ./database/
-        image: ayakicoder/postgres
-        ports:
-            - ${POSTGRES_PORT}:${POSTGRES_PORT}
-        volumes: 
-            - ./database/logs:/logs:z
-        environment:
-            - POSTGRES_PORT=${POSTGRES_PORT}
-            - POSTGRES_DB=${POSTGRES_DB}
-            - POSTGRES_USER=${POSTGRES_USER}
-            - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+  mydb:
+    container_name: mydb
+    image: postgres:13.3-alpine
+    env_file:
+      - .env
+    ports:
+      - ${POSTGRES_PORT}:${POSTGRES_PORT}
+    volumes: 
+      - ./database/logs:/logs:z
+    environment:
+      - POSTGRES_PORT=${POSTGRES_PORT}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
 
-networks:
-    my-network:
-        driver: bridge
+     
         
